--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/activity_main_drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -16,6 +17,14 @@
             android:layout_height="@dimen/toolbar_height"
             android:layout_alignParentTop="true"
             android:background="?attr/colorPrimary"/>
+
+        <fragment
+            android:id="@+id/activity_main_articles_fragment"
+            android:name="com.tsums.newshacker.fragments.ItemListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/activity_main_toolbar"
+            tools:layout="@layout/fragment_item_list"/>
 
     </RelativeLayout>
 
