Adding the xml styles for a Dark Theme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,14 @@
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
+
+    <color name="dark_primary">#4F4F4F</color>
+    <color name="dark_primary_dark">#2F2F2F</color>
+    <color name="dark_primary_light">#CF3702</color>
+    <color name="dark_accent">#D0D0D0</color>
+    <color name="dark_primary_text">#E64A19</color>
+    <color name="dark_secondary_text">#929292</color>
+    <color name="dark_icons">#FFFFFF</color>
+    <color name="dark_divider">#B6B6B6</color>
+
 </resources>
