--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,11 +18,19 @@
 
     <style name="article_list_item_title">
         <item name="android:textSize">20sp</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="article_list_item_author">
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
     </style>
+
+    <style name="article_list_item_time">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
 
 </resources>
