--- a/app/src/main/res/layout/activity_main_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_drawer_header.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="175dp"
-    android:background="@color/primary_dark"
+    android:background="?attr/colorPrimaryDark"
     android:orientation="vertical">
 
     <TextView
