--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     android:id="@+id/activity_main_drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -19,13 +18,19 @@
             android:layout_alignParentTop="true"
             android:background="?attr/colorPrimary"/>
 
-        <fragment
-            android:id="@+id/activity_main_articles_fragment"
-            android:name="com.tsums.newshacker.fragments.ItemListFragment"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/activity_main_swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/activity_main_toolbar"
-            tools:layout="@layout/fragment_item_list"/>
+            android:layout_below="@id/activity_main_toolbar">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/activity_main_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"/>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </RelativeLayout>
 
