--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,17 +26,23 @@
     </style>
 
     <style name="article_list_item_title">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="article_list_item_domain">
+        <item name="android:textSize">10sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+
     <style name="article_list_item_author">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
     </style>
 
     <style name="article_list_item_time">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textStyle">italic</item>
     </style>
