--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ NewsHacker - activity_article_detail.xml
-  ~ Last Modified: 1/18/16 4:59 PM
+  ~ Last Modified: 1/23/16 8:58 AM
   ~
   ~ Copyright (c) 2016 Trevor Summerfield
   ~
@@ -35,9 +35,9 @@
         android:layout_height="@dimen/toolbar_height"
         android:background="?attr/colorPrimary"/>
 
-    <WebView
-        android:id="@+id/activity_article_detail_webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <!--<WebView-->
+        <!--android:id="@+id/activity_article_detail_webview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
 
 </LinearLayout>
