--- a/app/src/main/res/layout/activity_main_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_drawer_header.xml
@@ -32,6 +32,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/activity.main.drawer.header.title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -40,5 +41,14 @@
         android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="24sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/activity.main.drawer.header.title"
+        android:layout_centerHorizontal="true"
+        android:text="by tsums"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"/>
 
 </RelativeLayout>
